input-sys/src/platforms/freebsd/x86/gen_1_9.rs

#[doc = " This is not a real event type, and is only used to tell the user that"]
#[doc = " no new event is available in the queue. See"]
#[doc = " libinput_next_event_type()."]
pub const libinput_event_type_LIBINPUT_EVENT_NONE: libinput_event_type = 0;
#[doc = " Signals that a device has been added to the context. The device will"]
#[doc = " not be read until the next time the user calls libinput_dispatch()"]
#[doc = " and data is available."]
#[doc = ""]
#[doc = " This allows setting up initial device configuration before any events"]
#[doc = " are created."]
pub const libinput_event_type_LIBINPUT_EVENT_DEVICE_ADDED: libinput_event_type = 1;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_DEVICE_REMOVED: libinput_event_type = 2;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_KEYBOARD_KEY: libinput_event_type = 300;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_POINTER_MOTION: libinput_event_type = 400;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE: libinput_event_type = 401;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_POINTER_BUTTON: libinput_event_type = 402;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_POINTER_AXIS: libinput_event_type = 403;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_TOUCH_DOWN: libinput_event_type = 500;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_TOUCH_UP: libinput_event_type = 501;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_TOUCH_MOTION: libinput_event_type = 502;
#[doc = " Signals that a device has been removed. No more events from the"]
#[doc = " associated device will be in the queue or be queued after this event."]
pub const libinput_event_type_LIBINPUT_EVENT_TOUCH_CANCEL: libinput_event_type = 503;
#[doc = " Signals the end of a set of touchpoints at one device sample"]
#[doc = " time. This event has no coordinate information attached."]
pub const libinput_event_type_LIBINPUT_EVENT_TOUCH_FRAME: libinput_event_type = 504;
#[doc = " One or more axes have changed state on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_TOOL capability. This event is only sent"]
#[doc = " when the tool is in proximity, see @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY for details."]
#[doc = ""]
#[doc = " The proximity event contains the initial state of the axis as the"]
#[doc = " tool comes into proximity. An event of type @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_AXIS is only sent when an axis value"]
#[doc = " changes from this initial state. It is possible for a tool to"]
#[doc = " enter and leave proximity without sending an event of type @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_AXIS."]
#[doc = ""]
#[doc = " An event of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS is sent"]
#[doc = " when the tip state does not change. See the documentation for"]
#[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP for more details."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_TOOL_AXIS: libinput_event_type = 600;
#[doc = " Signals that a tool has come in or out of proximity of a device with"]
#[doc = " the @ref LIBINPUT_DEVICE_CAP_TABLET_TOOL capability."]
#[doc = ""]
#[doc = " Proximity events contain each of the current values for each axis,"]
#[doc = " and these values may be extracted from them in the same way they are"]
#[doc = " with @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS events."]
#[doc = ""]
#[doc = " Some tools may always be in proximity. For these tools, events of"]
#[doc = " type @ref LIBINPUT_TABLET_TOOL_PROXIMITY_STATE_IN are sent only once after @ref"]
#[doc = " LIBINPUT_EVENT_DEVICE_ADDED, and events of type @ref"]
#[doc = " LIBINPUT_TABLET_TOOL_PROXIMITY_STATE_OUT are sent only once before @ref"]
#[doc = " LIBINPUT_EVENT_DEVICE_REMOVED."]
#[doc = ""]
#[doc = " If the tool that comes into proximity supports x/y coordinates,"]
#[doc = " libinput guarantees that both x and y are set in the proximity"]
#[doc = " event."]
#[doc = ""]
#[doc = " When a tool goes out of proximity, the value of every axis should be"]
#[doc = " assumed to have an undefined state and any buttons that are currently held"]
#[doc = " down on the stylus are marked as released. Button release events for"]
#[doc = " each button that was held down on the stylus are sent before the"]
#[doc = " proximity out event."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY: libinput_event_type = 601;
#[doc = " Signals that a tool has come in contact with the surface of a"]
#[doc = " device with the @ref LIBINPUT_DEVICE_CAP_TABLET_TOOL capability."]
#[doc = ""]
#[doc = " On devices without distance proximity detection, the @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP is sent immediately after @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY for the tip down event, and"]
#[doc = " immediately before for the tip up event."]
#[doc = ""]
#[doc = " The decision when a tip touches the surface is device-dependent"]
#[doc = " and may be derived from pressure data or other means. If the tip"]
#[doc = " state is changed by axes changing state, the"]
#[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP event includes the changed"]
#[doc = " axes and no additional axis event is sent for this state change."]
#[doc = " In other words, a caller must look at both @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_AXIS and @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP events to know the current state"]
#[doc = " of the axes."]
#[doc = ""]
#[doc = " If a button state change occurs at the same time as a tip state"]
#[doc = " change, the order of events is device-dependent."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_TOOL_TIP: libinput_event_type = 602;
#[doc = " Signals that a tool has changed a logical button state on a"]
#[doc = " device with the @ref LIBINPUT_DEVICE_CAP_TABLET_TOOL capability."]
#[doc = ""]
#[doc = " Button state changes occur on their own and do not include axis"]
#[doc = " state changes. If button and axis state changes occur within the"]
#[doc = " same logical hardware event, the order of the @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON and @ref"]
#[doc = " LIBINPUT_EVENT_TABLET_TOOL_AXIS event is device-specific."]
#[doc = ""]
#[doc = " This event is not to be confused with the button events emitted"]
#[doc = " by the tablet pad. See @ref LIBINPUT_EVENT_TABLET_PAD_BUTTON."]
#[doc = ""]
#[doc = " @see LIBINPUT_EVENT_TABLET_BUTTON"]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_TOOL_BUTTON: libinput_event_type = 603;
#[doc = " A button pressed on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
#[doc = ""]
#[doc = " This event is not to be confused with the button events emitted"]
#[doc = " by tools on a tablet. See @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_PAD_BUTTON: libinput_event_type = 700;
#[doc = " A status change on a tablet ring with the"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_PAD_RING: libinput_event_type = 701;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_TABLET_PAD_STRIP: libinput_event_type = 702;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN: libinput_event_type = 800;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE: libinput_event_type = 801;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_SWIPE_END: libinput_event_type = 802;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_PINCH_BEGIN: libinput_event_type = 803;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_PINCH_UPDATE: libinput_event_type = 804;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_GESTURE_PINCH_END: libinput_event_type = 805;
#[doc = " A status change on a strip on a device with the @ref"]
#[doc = " LIBINPUT_DEVICE_CAP_TABLET_PAD capability."]
pub const libinput_event_type_LIBINPUT_EVENT_SWITCH_TOGGLE: libinput_event_type = 900;
#[doc = " @ingroup base"]
#[doc = ""]
#[doc = " Event type for events returned by libinput_get_event()."]
pub type libinput_event_type = ::libc::c_uint;
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Destroy the event, freeing all associated resources. Resources obtained"]
    #[doc = " from this event must be considered invalid after this call."]
    #[doc = ""]
    #[doc = " @warning Unlike other structs events are considered transient and"]
    #[doc = " <b>not</b> refcounted. Calling libinput_event_destroy() <b>will</b>"]
    #[doc = " destroy the event."]
    #[doc = ""]
    #[doc = " @param event An event retrieved by libinput_get_event()."]
    pub fn libinput_event_destroy(event: *mut libinput_event);
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Get the type of the event."]
    #[doc = ""]
    #[doc = " @param event An event retrieved by libinput_get_event()."]
    pub fn libinput_event_get_type(event: *mut libinput_event) -> libinput_event_type;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Get the libinput context from the event."]
    #[doc = ""]
    #[doc = " @param event The libinput event"]
    #[doc = " @return The libinput context for this event."]
    pub fn libinput_event_get_context(event: *mut libinput_event) -> *mut libinput;
}
